Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -1,32 +1,103 @@
-🚀 Introducing PackSavvy 1.0
-Your Smart Packing Assistant: No More Forgotten Essentials!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PackSavvy 1.0 - Your Smart Packing Assistant</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 2em;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        section {
+            margin-bottom: 2em;
+        }
+        article {
+            margin-bottom: 1.5em;
+        }
+        .app-stores {
+            text-align: center;
+            margin: 2em 0;
+        }
+        .app-stores span {
+            margin: 0 1em;
+            font-size: 1.2em;
+        }
+        footer {
+            text-align: center;
+            margin-top: 3em;
+            padding-top: 1em;
+            border-top: 1px solid #eee;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>🚀 Introducing PackSavvy 1.0</h1>
+        <h2>Your Smart Packing Assistant: No More Forgotten Essentials!</h2>
+    </header>
 
-Welcome to Effortless Packing
+    <main>
+        <section>
+            <h2>Welcome to Effortless Packing</h2>
+            <p>
+                PackSavvy 1.0 is the ultimate checklist app for travelers, campers, and business pros. 
+                Optimized for iOS and Android, it auto-generates customized lists based on your trip type 
+                and duration—say goodbye to "Did I pack that?" anxiety. Systematic, fun, and free of clutter.
+            </p>
+        </section>
 
-PackSavvy 1.0 is the ultimate checklist app for travelers, campers, and business pros. Optimized for iOS and Android, it auto-generates customized lists based on your trip type and duration—say goodbye to "Did I pack that?" anxiety. Systematic, fun, and free of clutter.
+        <section>
+            <h2>Key Features</h2>
+            
+            <article>
+                <h3>📱 Auto-Custom Lists</h3>
+                <p>Create tailored checklists for vacations, work trips, or camping—input purpose and dates, 
+                and get a ready-to-go plan.</p>
+            </article>
 
-Key Features
+            <article>
+                <h3>🎒 Bag Management</h3>
+                <p>Assign items to specific bags or compartments. Track quantities and visualize your 
+                packing progress in real-time.</p>
+            </article>
 
-📱 Auto-Custom Lists
+            <article>
+                <h3>🌍 Multi-Language</h3>
+                <p>Supports English, Korean, Japanese, Chinese, and Spanish. Pack like a local, wherever you go.</p>
+            </article>
 
-Create tailored checklists for vacations, work trips, or camping—input purpose and dates, and get a ready-to-go plan.
+            <article>
+                <h3>📤 Share & Sync</h3>
+                <p>Export lists easily (sharing with friends coming soon). Stay organized solo or with your crew.</p>
+            </article>
+        </section>
 
-🎒 Bag Management
+        <section>
+            <h2>Ready to Pack Smarter?</h2>
+            <p>Download PackSavvy 1.0 today and transform your prep into a breeze. 
+            Available on App Store & Google Play.</p>
+            
+            <div class="app-stores">
+                <span>📱 iOS</span>
+                <span>🤖 Android</span>
+            </div>
+        </section>
+    </main>
 
-Assign items to specific bags or compartments. Track quantities and visualize your packing progress in real-time.
-
-🌍 Multi-Language
-
-Supports English, Korean, Japanese, Chinese, and Spanish. Pack like a local, wherever you go.
-
-📤 Share & Sync
-
-Export lists easily (sharing with friends coming soon). Stay organized solo or with your crew.
-
-Ready to Pack Smarter?
-
-Download PackSavvy 1.0 today and transform your prep into a breeze. Available on App Store & Google Play.
-
-📱 iOS 🤖 Android
-
-© 2025 PackSavvy. Developed by [Your Name/Team]. All rights reserved. | Privacy Policy
+    <footer>
+        <p>© 2025 PackSavvy. Developed by [Your Name/Team]. All rights reserved. | Privacy Policy</p>
+    </footer>
+</body>
+</html>
