--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-        <p>© 2025 PackSavvy. Developed by [Your Name/Team]. All rights reserved. | Privacy Policy</p>
+        <p>© 2025 PackSavvy. Developed by PN Tech Co., Germany. All rights reserved. | Privacy Policy</p>
     </footer>
 </body>
 </html>
